@@ -248,7 +248,9 @@ Changes on 1.2.0 since 1.1.0:
     and otherwise counting will take too much resources.
 
 * Added API to create third-party plugins that may append own text to the
-    statusbar text for selected files.
+    statusbar text for selected files. The plugins should be installed
+    into $(libdir)/pcmanfm folder and use "#include <pcmanfm-modules.h>"
+    directive in the code.
 
 
 Changes on 1.1.0 since 1.0.1:
